--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,21 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
+  #网络请求
+  dio: ^2.1.13
+
+  #轮播图
+  flutter_swiper: ^1.1.6
+
+  #屏幕适配
+  flutter_screenutil: ^0.5.3
+
+  #拨打电话
+  url_launcher: ^5.0.5
+
+  #刷新控件
+  flutter_easyrefresh: ^1.2.7
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
