--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   flutter_easyrefresh: ^1.2.7
 
   #状态管理
-  provide: ^1.0.2
+  provider: ^3.0.0+1
 
   #提示插件
   fluttertoast: ^3.1.0
@@ -51,7 +51,6 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
