--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   #路由组件
   fluro: ^1.5.0
 
+  #html页面
+  flutter_html: ^0.9.6
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
